# lfp-cpp-library

./: CMakeLists.txt  readme.md
cmake/Modules/: FFTW.cmake  FindFFTW.cmake  HDF5.cmake
examples/: CMakeLists.txt  eg_fftabs_calculation.cpp  eg_psd_calculation.cpp  eg_time_buffer.cpp  eg_windows.cpp  example_program_1.cpp
include/: lfpRatiometer.in
include/lfpRatiometer_h/: lfpRatiometer.h
misc/test-cmake-installation/: CMakeLists.txt
misc/test-cmake-installation/src/: main.cpp
scripts/: generate-lib-sourcelist.sh
src/: lfpRatiometer.cpp  sourcelist.txt
